@@ -15,6 +15,7 @@
 - Fixed rare bug that could cause tracks to have an incorrect instrument name when importing a MIDI<br/>
 - Provide graphical warnings when a MIDI file cannot be perfectly loaded<br/>
 - Fixed rare printing crash<br/>
+- Fixed problems with silences when printing scores with uneven chords<br/>
 - Fixed not staying centered when zooming with ctrl+mouse wheel<br/>
 - Fixed "rearrange notes" feature in tablature editor, which had accidentally been disabled<br/>
 - Fixed issues in score editor with stem for some notes being sometimes up, sometimes down<br/>
