@@ -22,6 +22,7 @@
 #include <cmath>
 #include <cassert>
 
+#include "Midi/MeasureData.h"
 #include "Printing/RenderRoutines.h"
 #include "Printing/SymbolPrinter/EditorPrintable.h"
 
@@ -563,8 +564,9 @@ Range<float> RelativePlacementManager::getSymbolRelativeArea(int tick) const
     
     if (id == -1)
     {
-        std::cerr << "WARNING: RelativePlacementManager::getSymbolRelativeArea could not find tick " << tick << "\n";
-        ASSERT(false);
+        std::cerr << "WARNING: RelativePlacementManager::getSymbolRelativeArea could not find tick " << tick 
+                  << " (beat " << tick/float(getMeasureData()->beatLengthInTicks()) << ")\n";
+        //ASSERT(false);
         return Range<float>(0, 0);
     }
     
